// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack js transform > script 1`] = `
{
  "code": "console.log(\\"%c🚀 index.js:1 %c\\\\n%c🔦 Jump to Editor http://localhost:3090/client#Li4vLi4vLi4vLi4vaW5kZXguanM6MTox\\",\\"padding:2px 5px; border-radius:3px;color: #111827; background: #F7DF1E\\",\\"\\",\\"background: #00DC8220;padding:2px 5px;border-radius:3px;margin-top:5px;margin-bottom:5px\\",\\"\\\\n\\",'hello javascript',\\"\\")",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA,gSAAY,qBAAkB",
    "names": [],
    "sources": [
      "index.js",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`webpack vue transform > script 1`] = `
{
  "code": "<template>
  <img alt=\\"Vue logo\\" src=\\"./assets/logo.png\\">
  <HelloWorld msg=\\"Welcome to Your Vue.js + TypeScript App\\"/>
</template>

<script lang=\\"ts\\">
import { defineComponent } from 'vue';
import HelloWorld from './components/HelloWorld.vue';

console.log(\\"%c🚀 App.vue:10 %c\\\\n%c🔦 Jump to Editor http://localhost:3070/client#Li4vLi4vLi4vLi4vQXBwLnZ1ZToxMDox\\",\\"padding:2px 5px; border-radius:3px;color: #fff; background: #4FC08D\\",\\"\\",\\"background: #00DC8220;padding:2px 5px;border-radius:3px;margin-top:5px;margin-bottom:5px\\",\\"\\\\n\\",'App.vue',\\"\\")

export default defineComponent({
  name: 'App',
  components: {
    HelloWorld
  }
});
</script>
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA,6RAAY,YAAS;AACrB;AACA;AACA;AACA;AACA;AACA;AACA;AACA;",
    "names": [],
    "sources": [
      "App.vue",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;

exports[`webpack vue transform > script setup 1`] = `
{
  "code": "<script setup lang=\\"ts\\">
  console.log(\\"%c🚀 App.vue:2 %c\\\\n%c🔦 Jump to Editor http://localhost:3090/client#Li4vLi4vLi4vLi4vQXBwLnZ1ZToyOjM=\\",\\"padding:2px 5px; border-radius:3px;color: #fff; background: #4FC08D\\",\\"\\",\\"background: #00DC8220;padding:2px 5px;border-radius:3px;margin-top:5px;margin-bottom:5px\\",\\"\\\\n\\",'script setup',\\"\\")
  </script>
  
  <template>
    <div>
      script setup
    </div>
  </template>
",
  "map": SourceMap {
    "file": undefined,
    "mappings": "AAAA;AACA,8RAAc,iBAAc;AAC5B;AACA;AACA;AACA;AACA;AACA;AACA;",
    "names": [],
    "sources": [
      "App.vue",
    ],
    "sourcesContent": undefined,
    "version": 3,
  },
}
`;
